# InsiteChart

./: .env  .env.docker  .env.example  .replit  API_DOCUMENTATION_UPDATE_ANALYSIS.md  BACKEND_API_ANALYSIS.md  CACHE_STRATEGY_ANALYSIS.md  CI_CD_PIPELINE_IMPROVEMENT_ANALYSIS.md  DATA_MODEL_CONSISTENCY_ANALYSIS.md  DEPLOYMENT_OPERATIONS_AUTOMATION_ANALYSIS.md  DETAILED_IMPLEMENTATION_PLAN.md  DOCKER_COMPOSE_SETUP.md  Dockerfile.frontend  FINAL_COMPREHENSIVE_ANALYSIS_REPORT.md  FRONTEND_UX_ANALYSIS.md  INSTALL.md  INTERNATIONALIZATION_I18N_SUPPORT_ANALYSIS.md  NEXT_SESSION_PREPARATION.md  PERFORMANCE_MONITORING_OPTIMIZATION_ANALYSIS.md  PROJECT_ANALYSIS_REPORT.md  README.md  REALTIME_DATA_COLLECTION_ANALYSIS.md  SECURITY_AUTHENTICATION_ANALYSIS.md  SENTIMENT_ANALYSIS_IMPROVEMENT.md  TEST_COVERAGE_ANALYSIS.md  USER_FEEDBACK_SYSTEM_ANALYSIS.md  USER_MANUAL.md  app.py  app_backend.py  app_new.py  automation_test_report.md  comprehensive_implementation_review_final_summary.md  comprehensive_test_system_analysis.md  comprehensive_test_system_final_report.md  coverage.xml  current_implementation_deep_analysis.md  data_model_api_optimization_analysis.md  detailed_implementation_code_review.md  docker-compose.override.yml  docker-compose.prod.yml  (+33 more)
.github/: notify.yml
.github/workflows/: ci-cd-pipeline.yml  ci-cd.yml  test.yml
.kiro/specs/: integration-improvements.md
backend/: Dockerfile  __init__.py  alembic.ini  config.py  database.py  main.py  requirements.txt
backend/alembic/: env.py
backend/api/: __init__.py  auth_routes.py  auto_scaling_routes.py  automated_test_routes.py  correlation_routes.py  data_encryption_routes.py  distributed_data_collector_routes.py  feedback_routes.py  gateway.py  gdpr_routes.py  i18n_routes.py  main_app.py  ml_trend_routes.py  monitoring_routes.py  resource_optimization_routes.py  routes.py  security_routes.py  test_routes.py  threat_detection_routes.py  timescale_routes.py  unified_routes.py  websocket_routes.py
backend/cache/: __init__.py  enhanced_redis_cache.py  memory_cache.py  redis_cache.py  resilient_cache_manager.py  unified_cache.py
backend/logging/: structured_logger.py
backend/middleware/: auth_middleware.py  cache_middleware.py  rate_limit_middleware.py  security_headers.py
backend/models/: __init__.py  database_models.py  unified_models.py
backend/monitoring/: cache_monitor.py  dashboard.py  operational_monitor.py  performance_monitor.py
backend/services/: __init__.py  advanced_sentiment_service.py  api_key_service.py  auto_scaling_service.py  automated_test_service.py  bert_sentiment_service.py  correlation_analysis_service.py  data_consistency_manager.py  data_encryption_service.py  data_transformer.py  distributed_cache.py  distributed_data_collector.py  feedback_service.py  gdpr_automation_service.py  i18n_service.py  intelligent_cache_manager.py  kafka_event_bus.py  message_ordering_manager.py  ml_trend_detection_service.py  notification_template_service.py  notification_types.py  rate_limit_service.py  realtime_data_collector.py  realtime_notification_service.py  redis_pubsub_manager.py  resource_optimization_service.py  security_service.py  sentiment_service.py  stock_service.py  threat_detection_service.py  timescale_service.py  unified_service.py  websocket_connection_manager.py  yahoo_finance_service.py
docs/: SNS_INTEGRATION_PROGRESS.md
docs/sns-integration/: DETAILED_PLATFORM_ANALYSIS.md  STOCKTWITS_INTEGRATION.md  TECHNICAL_INTEGRATION_GUIDE.md
docs/spec/: 01-introduction.md  02-system-architecture.md  03-api-integration.md  04-performance-scalability.md  05-security-privacy.md  06-testing-strategy.md  07-deployment-operations.md  08-ux-accessibility.md  09-implementation-plan.md  10-appendix.md  11-integrated-data-model.md  11-integrated-data-model.md.backup  12-api-gateway-routing.md  12-api-gateway-routing.md.backup  13-unified-caching-system.md  14-realtime-data-sync.md  15-unified-dashboard-ux.md  16-correlation-analysis.md  16-correlation-analysis.md.backup  17-final-implementation-roadmap.md  17-final-implementation-roadmap.md.backup  18-spec-compatibility-analysis.md  18-spec-compatibility-analysis.md.backup  19-spec-consistency-feasibility-review.md  20-final-spec-improvements.md  21-advanced-realtime-features.md  21-api-rate-limiting-strategy.md  21-final-implementation-review.md  21-final-recommendations.md  21-ui-ux-feature-breakdown.md  22-data-backup-recovery-strategy.md  22-execution-plan.md  22-final-spec-review.md  22-ui-workflow-analysis.md  23-implementation-guide.md  23-monitoring-alerting-system.md  23-spec-document-improvements.md  23-ui-database-mapping.md  24-final-modification-summary.md  24-internationalization-i18n-strategy.md  (+25 more)
frontend/: __init__.py  accessibility.py  api_client.py  feedback_client.py  i18n.py  notification_client.py  requirements.txt  ui_ux_service.py  utils.py
reports/: performance-results.xml  test_report_20251110_234154.html  test_report_20251110_234154.json  test_report_20251110_234227.html  test_report_20251110_234227.json  test_report_20251110_234635.html  test_report_20251110_234635.json  test_report_20251110_234750.html  test_report_20251110_234750.json  test_report_20251110_234848.html  test_report_20251110_234848.json  test_results_20251110_234635.csv  unit-test-results.xml
scripts/: docker-compose-up.sh  final_validation.py  fix_data_models.py  fix_implementation_schedule.py  fix_performance_targets.py  generate_test_report.py  run_tests.py  run_tests.sh  test_automation.py  validate_automation.py  validate_fixes.py
services/analytics-service/: .gitignore  Dockerfile  README.md  main.py  requirements.txt
tests/: conftest.py  test_integration.py
(+84 files in other folders)
